--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "aurelia-fetch-client": "^1.0.0",
     "bluebird": "^3.4.1",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "moment": "^2.15.1"
   },
   "peerDependencies": {},
   "devDependencies": {
