--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aurelia-animator-css": "^1.0.0",
     "aurelia-bootstrapper": "^1.0.0",
     "aurelia-fetch-client": "^1.0.0",
+    "aurelia-http-client": "^1.0.1",
     "bluebird": "^3.4.1",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
